--- a/protoOne/Packages/manifest.json
+++ b/protoOne/Packages/manifest.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.entities": "0.8.0-preview.8",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.4",
+    "com.unity.jobs": "0.2.7-preview.11",
+    "com.unity.physics": "0.3.1-preview",
     "com.unity.render-pipelines.universal": "7.1.8",
+    "com.unity.rendering.hybrid": "0.4.0-preview.8",
     "com.unity.test-framework": "1.1.11",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.12",
