--- a/protoOne/Packages/manifest.json
+++ b/protoOne/Packages/manifest.json
@@ -4,8 +4,11 @@
     "com.unity.entities": "0.8.0-preview.8",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.4",
+    "com.unity.inputsystem": "1.0.0-preview.6",
     "com.unity.jobs": "0.2.7-preview.11",
     "com.unity.physics": "0.3.1-preview",
+    "com.unity.probuilder": "4.2.3",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.render-pipelines.universal": "7.1.8",
     "com.unity.rendering.hybrid": "0.4.0-preview.8",
     "com.unity.test-framework": "1.1.11",
